--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link data-trunk rel="css" href="style.css" />
+    <title>Task App</title>
+  </head>
   <body></body>
 </html>
